--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,8 @@ pytz==2022.7.1
 requests==2.28.2
 selenium==4.8.0
 six==1.16.0
+slack-bolt==1.16.1
+slack-sdk==3.19.5
 slackclient==2.9.4
 sniffio==1.3.0
 sortedcontainers==2.4.0
